--- a/.github/workflows/project-board.yml
+++ b/.github/workflows/project-board.yml
@@ -9,7 +9,7 @@ jobs:
       fail-fast: false
       matrix:
         project: 
-          - 'Test Board GA'
+          - 'TestBoard'
     runs-on: ubuntu-latest
     if: contains(github.event.issue.labels.*.name, 'good first issue')
     steps:
@@ -39,7 +39,7 @@ jobs:
       - name: Close Project Card
         if: |
           github.event.action == 'closed'
-        uses: asmfnk/my-github-project-automation@v0.5.0
+        uses: alex-page/github-project-automation-plus@v0.8.1
         with:
           project: ${{ matrix.project }}
           column: 'Done'
